Ajuste links relativos

--- a/stories.html
+++ b/stories.html
@@ -24,7 +24,7 @@ permalink: /stories/
         <!-- First story: working link -->
         <div class="col-sm-6 col-md-4 col-lg-3 text-center">
           <a
-            href="/stories/first-story"
+            href="./stories/first-story"
             class="text-decoration-none text-dark d-block"
           >
             <img
