--- a/collection.html
+++ b/collection.html
@@ -24,7 +24,7 @@ permalink: /collection/
       <h3 class="mb-3 ml-3">On Women</h3>
       
       <div class="row g-4">
-        <a href="/coming">
+        <a href="./coming">
         <div class="col-sm-6 col-md-4 col-lg-3">
             
           <div class="card h-100">
