Ajuste links relativo2s

--- a/stories.html
+++ b/stories.html
@@ -24,11 +24,11 @@ permalink: /stories/
         <!-- First story: working link -->
         <div class="col-sm-6 col-md-4 col-lg-3 text-center">
           <a
-            href="./stories/first-story"
+            href="./first-story"
             class="text-decoration-none text-dark d-block"
           >
             <img
-              src="/assets/images/moravia.jpg"
+              src="{{ '/assets/images/moravia.jpg' | relative_url }}"
               alt="Story 1"
               class="img-fluid mb-2"
             />
@@ -41,7 +41,7 @@ permalink: /stories/
         <div class="col-sm-6 col-md-4 col-lg-3 text-center">
           <div class="d-block">
             <img
-              src="/assets/images/moravia2.jpg"
+              src="{{ '/assets/images/moravia2.jpg' | relative_url }}"
               alt="Story 2"
               class="img-fluid mb-2"
             />
@@ -53,7 +53,7 @@ permalink: /stories/
         <div class="col-sm-6 col-md-4 col-lg-3 text-center">
           <div class="d-block">
             <img
-              src="/assets/images/moravia3.jpg"
+              src="{{ '/assets/images/moravia3.jpg' | relative_url }}"
               alt="Story 3"
               class="img-fluid mb-2"
             />
@@ -65,7 +65,7 @@ permalink: /stories/
         <div class="col-sm-6 col-md-4 col-lg-3 text-center">
           <div class="d-block">
             <img
-              src="/assets/images/moravia4.jpg"
+              src="{{ '/assets/images/moravia4.jpg' | relative_url }}"
               alt="Story 4"
               class="img-fluid mb-2"
             />
