Ajuste links relativos3

--- a/collection.html
+++ b/collection.html
@@ -24,12 +24,12 @@ permalink: /collection/
       <h3 class="mb-3 ml-3">On Women</h3>
       
       <div class="row g-4">
-        <a href="./coming">
+        <a href="{{ '/coming' | relative_url }}">
         <div class="col-sm-6 col-md-4 col-lg-3">
             
           <div class="card h-100">
             <img
-              src="/assets/images/moravia.jpg"
+            src="{{ '/assets/images/moravia.jpg' | relative_url }}"
               class="card-img-top"
               alt="..."
             />
@@ -42,7 +42,7 @@ permalink: /collection/
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100">
             <img
-              src="/assets/images/moravia.jpg"
+            src="{{ '/assets/images/moravia2.jpg' | relative_url }}"
               class="card-img-top"
               alt="..."
             />
@@ -54,7 +54,7 @@ permalink: /collection/
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100">
             <img
-              src="/assets/images/moravia.jpg"
+            src="{{ '/assets/images/moravia3.jpg' | relative_url }}"
               class="card-img-top"
               alt="..."
             />
@@ -66,7 +66,7 @@ permalink: /collection/
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100">
             <img
-              src="/assets/images/moravia.jpg"
+            src="{{ '/assets/images/moravia4.jpg' | relative_url }}"
               class="card-img-top"
               alt="..."
             />
